--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "standalone",
   "Scope": "/",
-  "start_url": "/",
+  "start_url": "/userlist-pwa/",
   "icons": [
     {
       "src": "images/icons/16x16.png",
